test/assets/4/error-messages/no-open-paren3.txt
[1 of 1] Compiling Main             ( test\assets\4\no-open-paren3.hs, test\assets\4\no-open-paren3.o )

test\assets\4\no-open-paren3.hs:3:41: error:
    parse error on input ‘)’
  |
3 |   putStr (unlines (reverse lines input)))
  |                                         ^
